<resources>
    <string name="app_name">TimeTable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Fragments strings -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_snackbar">Please, select one item.</string>
    <string name="selected">Selected</string>

    <!-- Main Activity strings -->
    <string name="timetable">TimeTable</string>
    <string name="ulan_nurymov_gmail_com">ulan.nurymov@gmail.com</string>
    <string name="seven_days_of_the_week">7 Days of the Week</string>
    <string name="subject">Subject</string>
    <string name="field_error">field can not be empty!</string>
    <string name="time_error">Time field can not be empty!</string>
    <string name="week">Week</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website">School website</string>
    <string name="school_website_snackbar">Please, set URL of your school website in settings.</string>

    <string name="add_subject">Add subject</string>
    <string name="edit_subject">Edit subject</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="userID">Student ID</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="teacher_dialog">Teacher:</string>
    <string name="room_dialog">Room:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>

    <!-- Tasks Activity strings -->
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="tasks">Tasks</string>
    <string name="select_date">Select date</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="deadline">Deadline</string>
    <string name="description_dialog">Description:</string>
    <string name="desctiption">Desctiption</string>
    <string name="date_error">Date field can not be empty!</string>
    <string name="edit_task">Edit task</string>
    <string name="add_task">Add task</string>
    <string name="deadline_snackbar">Deadline field can not be empty!</string>
    <string name="date">Date</string>

    <!-- Notes Activity strings -->
    <string name="notes">Notes</string>
    <string name="title_dialog">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error">Title field can not be empty!</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>

    <!-- Contacts Activity strings -->
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Post:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>

    <!-- Events Activity strings -->
    <string name="events">Events</string>
    <string name="add_event">Add Event</string>
    <string name="date_dialog">Date:</string>
    <string name="time_dialog">Time:</string>

    <!-- Settings Activity strings -->
    <string name="sevendays_setting">Enable 7 Days of the Week</string>
    <string name="school_website_setting">Change school website</string>
    <string name="school_website_setting_summary">Change URL of your school website</string>

    <!-- Notification -->
    <string name="notification_title">Today\'s lessons</string>
    <string name="do_not_have_lessons">You do not have lessons!</string>
    <string name="logo_word">Technology changes life!</string>
    <string name="login_label">Login</string>
    <string name="login_title">Fluid Algorithms Timetable System</string>
    <string name="user_id">Student ID / Teacher ID</string>
    <string name="register_hint">Register Your Account Here!</string>
    <string name="login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_organisation_name">Organisation Name</string>
    <string name="hint_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="register">Already a member? Login</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="event">Event Name</string>
    <string name="host">Host</string>
    <string name="location">Location</string>
    <string name="event_dialog">Event Name:</string>
    <string name="host_dialog">Host:</string>
    <string name="location_dialog">Location</string>
    <string name="task_dialog">Task Name:</string>
    <string name="type_dialog">Type:</string>
    <string name="task">Task Name</string>
    <string name="type">Type</string>
    <string name="organisation">Organisation</string>
    <string name="organisation_dialog">Organisation:</string>
    <string name="topic_dialog">Topic:</string>
    <string name="duration_dialog">Duration:</string>
    <string name="topic">Topic</string>
    <string name="duration">Duration</string>
    <string name="appointments">Appointments</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="facebook_setting">Change facebook website</string>
    <string name="twitter_setting">Change twitter website</string>
    <string name="linkedin">LinkedIn</string>
    <string name="userID_dialog">Student ID:</string>
    <string name="semester">Semester</string>
    <string name="score">Score</string>
    <string name="results">Results</string>
    <string name="signup_label">Sign Up</string>
    <string name="settings">Settings</string>


</resources>
