<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/schoolwebsitemenu"
            android:icon="@drawable/baseline_open_in_browser_black_18"
            android:title="@string/school_website" />
        <item
            android:id="@+id/facebookmenu"
            android:icon="@drawable/baseline_open_in_browser_black_18"
            android:title="@string/facebook" />
        <item
            android:id="@+id/twittermenu"
            android:icon="@drawable/baseline_open_in_browser_black_18"
            android:title="@string/twitter" />
        <item
            android:id="@+id/linkedinmenu"
            android:icon="@drawable/baseline_open_in_browser_black_18"
            android:title="@string/linkedin" />
    </group>



    <group android:id="@+id/menu_mid"
        android:checkableBehavior="none">

        <item
            android:id="@+id/appointments"
            android:icon="@drawable/baseline_access_time_black_18"
            android:title="@string/appointments" />

        <item
            android:id="@+id/events"
            android:icon="@drawable/baseline_school_black_18"
            android:title="@string/events" />

        <item
            android:id="@+id/contacts"
            android:icon="@drawable/baseline_people_black_18"
            android:title="@string/contacts" />

        <item
            android:id="@+id/tasks"
            android:icon="@drawable/baseline_book_black_18"
            android:title="@string/tasks" />
        <item
            android:id="@+id/notes"
            android:icon="@drawable/baseline_event_note_black_18"
            android:title="@string/notes" />
        <item
            android:id="@+id/results"
            android:icon="@drawable/baseline_school_black_18"
            android:title="@string/results" />
    </group>

    <group android:id="@+id/menu_down"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_black_18"
            android:title="@string/action_settings" />
    </group>

</menu>
