<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/result_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background_selector"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp">


            <TextView
                android:id="@+id/subjectresult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/semesterimage"
                app:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/semesterresult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:text="@string/semester"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/semesterimage"
                card_view:layout_constraintTop_toBottomOf="@+id/subjectresult" />

            <TextView
                android:id="@+id/scoreresult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/score"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                card_view:layout_constraintEnd_toEndOf="@+id/semesterresult"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toEndOf="@+id/imageView5"
                card_view:layout_constraintTop_toBottomOf="@+id/semesterresult" />


            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/semesterimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_access_time_black_24"
                card_view:layout_constraintStart_toStartOf="@+id/imageView5"
                card_view:layout_constraintTop_toTopOf="@+id/semesterresult" />



            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_school_black_24"
                card_view:layout_constraintStart_toStartOf="@+id/semesterimage"
                card_view:layout_constraintTop_toTopOf="@+id/scoreresult" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>